--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.23",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.13"
+    "react-navigation-stack": "^2.0.13",
+    "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
