--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,8 @@ target 'studyNote' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'studyNoteTests' do
     inherit! :search_paths
     # Pods for testing
